@@ -1,3 +1,13 @@
+2008-04-12  Wakaba  <wakaba@suika.fam.cx>
+
+	* parser-manakai.cgi, parser-manakai-interface.en.html: The |innerHTML|
+	output mode is split into "|innerHTML| (HTML)" and "|innerHTML| (XML)"
+	output modes.
+
+2008-03-29  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc.cgi: New "URI" section is implemented.
+
 2008-03-21  Wakaba  <wakaba@suika.fam.cx>
 
 	* cc.cgi (get_node_path): Use qualified name, not just
